--- a/src/main/res/layout/fileexplorer.xml
+++ b/src/main/res/layout/fileexplorer.xml
@@ -1,44 +1,18 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:background="#FFFFFF"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-        <LinearLayout
-            android:id="@+id/mainPage01"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="0dp"
-                android:layout_weight="13"
-                android:layout_height="wrap_content">
-                <ImageButton
-                    android:id="@+id/slide_open_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/slide_open" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content">
-                <ImageButton
-                    android:id="@+id/list_favor_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/list_favor" />
-            </LinearLayout>
-        </LinearLayout>
-
+    android:layout_height="match_parent"
+    android:background="#FFFFFF">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <!--상단바-->
+        <include
+            android:id="@+id/actionBar01"
+            layout="@layout/actionbar"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -47,62 +21,53 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="60dp"
                 android:background="@drawable/underline"
                 android:text="    eduA"
                 android:textSize="13dp" />
-
             <TextView
                 android:id="@+id/current"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
-                android:layout_marginTop="60dp"
                 android:background="@drawable/underline"
                 android:text="current"
                 android:textSize="13dp" />
         </LinearLayout>
+        <ListView
+            android:layout_margin="20dp"
+            android:id="@+id/filelist"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ListView
-                android:id="@+id/filelist"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/btnroot"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="mOnClick"
+                android:text="HOME"/>
+            <Button
+                android:id="@+id/btnup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="mOnClick"
+                android:text="상위폴더"/>
+            <Button
+                android:id="@+id/btnNewDirectory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="mOnClick"
+                android:text="새폴더"/>
         </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-
-        <Button
-            android:id="@+id/btnroot"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="mOnClick"
-            android:text="HOME"/>
-        <Button
-            android:id="@+id/btnup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="mOnClick"
-            android:text="상위폴더"/>
-
-        <Button
-            android:id="@+id/btnNewDirectory"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="mOnClick"
-            android:text="새폴더"/>
-    </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
             <Button
                 android:id="@+id/btnTakePicture"
                 android:layout_width="wrap_content"
@@ -110,7 +75,6 @@
                 android:layout_weight="1"
                 android:onClick="mOnClick"
                 android:text="카메라로 사진찍기"/>
-
             <Button
                 android:id="@+id/btnLoadPicture"
                 android:layout_width="wrap_content"
@@ -119,4 +83,13 @@
                 android:onClick="mOnClick"
                 android:text="갤러리에서 가져오기"/>
         </LinearLayout>
-</LinearLayout>
+    </LinearLayout>
+    <!-- 사이드바 -->
+    <include
+        android:id="@+id/slidingPage01"
+        layout="@layout/sidebar"/>
+</FrameLayout>
+
+
+
+
