--- a/src/main/res/layout/actionbar.xml
+++ b/src/main/res/layout/actionbar.xml
@@ -23,11 +23,13 @@
         android:layout_height="match_parent"
         android:gravity="right">
         <ImageButton
-            android:id="@+id/list_favor_btn"
+            android:id="@+id/list_modify_btn"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/list_favor" />
+            android:onClick="onButton2Clicked"
+            android:background="@drawable/list_modify" />
     </LinearLayout>
 </LinearLayout>
