--- a/src/main/res/layout/custom_listview.xml
+++ b/src/main/res/layout/custom_listview.xml
@@ -5,31 +5,39 @@
     android:layout_margin="10dp"
     android:gravity="left|center_vertical"
     >
-    <ImageView
+    <CheckBox
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:id="@+id/listCheckBox"/>
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:id="@+id/listFileImage1"
-        android:layout_weight="1" />
+        android:layout_weight="1"/>
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_weight="2">
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:layout_weight="5">
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="New Text"
             android:id="@+id/listFileText1"
             android:textSize="13dp"
-            android:gravity="center_vertical"
-            android:layout_weight="1" />
+            android:gravity="center_vertical"/>
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="New Text"
             android:id="@+id/listFileText2"
-            android:textSize="13dp"
-            android:layout_weight="1" />
+            android:textSize="11dp"/>
     </LinearLayout>
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:id="@+id/listFavorImage01"/>
 </LinearLayout>
