--- a/src/main/res/layout/fileexplorer.xml
+++ b/src/main/res/layout/fileexplorer.xml
@@ -37,9 +37,16 @@
             android:layout_margin="20dp"
             android:id="@+id/filelist"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:choiceMode="multipleChoice"/>
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:id="@+id/subMenuBar01"
+            layout="@layout/sub_menu_bar"/>
         <LinearLayout
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -66,6 +73,7 @@
                 android:text="새폴더"/>
         </LinearLayout>
         <LinearLayout
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <Button
