--- a/src/main/res/layout/custom_listview.xml
+++ b/src/main/res/layout/custom_listview.xml
@@ -3,8 +3,7 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
-    android:gravity="left|center_vertical"
-    >
+    android:gravity="left|center_vertical">
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,6 +15,7 @@
         android:id="@+id/listFileImage1"
         android:layout_weight="1"/>
     <LinearLayout
+        android:id="@+id/layoutListText"
         android:orientation="vertical"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
