--- a/src/main/res/layout/sub_menu_bar.xml
+++ b/src/main/res/layout/sub_menu_bar.xml
@@ -9,21 +9,21 @@
         android:gravity="center_vertical|center_horizontal"
         android:background="@drawable/rect_box"
         android:textColor="#ffffff"
-        android:text="잘라내기"/>
+        android:text="이동"/>
     <TextView
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="match_parent"
-        android:gravity="center_vertical|center_horizontal"
-        android:background="@drawable/rect_box"
-        android:textColor="#ffffff"
-        android:text="새 폴더"/>
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
         android:gravity="center_vertical|center_horizontal"
         android:background="@drawable/rect_box"
         android:textColor="#ffffff"
         android:text="삭제"/>
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center_vertical|center_horizontal"
+        android:background="@drawable/rect_box"
+        android:textColor="#ffffff"
+        android:text="공유"/>
 </LinearLayout>
