--- a/src/main/res/drawable/underline.xml
+++ b/src/main/res/drawable/underline.xml
@@ -3,7 +3,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#000000" />
+            <solid android:color="#AAAAAA" />
         </shape>
     </item>
     <item android:bottom="2px">
